Adding CuisineType as its own table

--- a/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
+++ b/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Restaurants", "Index", "Restaurants")</li>
-                    <li>@Html.ActionLink("FoodType", "Index", "FoodType")</li>
+                    <li>@Html.ActionLink("CuisineType", "Index", "CuisineType")</li>
 
                 </ul>
             </div>
