--- a/OdeToFood/OdeToFood.Web/Views/CuisineType/Details.cshtml
+++ b/OdeToFood/OdeToFood.Web/Views/CuisineType/Details.cshtml
@@ -1,8 +1,6 @@
-﻿@model OdeToFood.Data.Models.Restaurant
+﻿@model OdeToFood.Data.Models.CuisineType
 
-@{
-    Layout = null;
-}
+
 
 <!DOCTYPE html>
 
@@ -13,7 +11,7 @@
 </head>
 <body>
     <div>
-        <h4>Restaurant</h4>
+        <h4>CuisineType</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
