--- a/OdeToFood/OdeToFood.Web/Views/Restaurants/Edit.cshtml
+++ b/OdeToFood/OdeToFood.Web/Views/Restaurants/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@model OdeToFood.Data.Models.Restaurant
-
+﻿@model OdeToFood.Web.Models.RestaurantViewModel
 @{
     ViewBag.Title = "Edit";
 }
@@ -25,10 +24,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Cuisine, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.cuisineTypeID, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Cuisine, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Cuisine, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(model => model.cuisineTypeID, Model.CuisineTypesList, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.cuisineTypeID, "", new { @class = "text-danger" })
         </div>
     </div>
 
