1/2 of Adding images to Cuisine Type

--- a/MVC/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/MVC/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<OdeToFood.Data.Models.Restaurant>
+﻿
+@model IEnumerable<OdeToFood.Web.Models.RestaurantViewModel>
 
 @{
     ViewBag.Title = "Index";
