--- a/MVC/OdeToFood/OdeToFood.Web/Views/Restaurants/_RestaurantSummary.cshtml
+++ b/MVC/OdeToFood/OdeToFood.Web/Views/Restaurants/_RestaurantSummary.cshtml
@@ -1,4 +1,4 @@
-﻿@model OdeToFood.Data.Models.Restaurant
+﻿@model OdeToFood.Web.Models.RestaurantViewModel
 
 <div class="panel panel-default">
     <div class="panel-heading">
