--- a/MVC/OdeToFood/OdeToFood.Web/Views/CuisineType/Create.cshtml
+++ b/MVC/OdeToFood/OdeToFood.Web/Views/CuisineType/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OdeToFood.Data.Models.CuisineType
+﻿@model OdeToFood.Web.Models.CuisineTypeViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -6,7 +6,8 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm("Create", "CuisineType", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -23,6 +24,13 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.ImageFile, new { type = "file" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -33,3 +41,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
