--- a/MVC/OdeToFood/OdeToFood.Web/Views/CuisineType/Details.cshtml
+++ b/MVC/OdeToFood/OdeToFood.Web/Views/CuisineType/Details.cshtml
@@ -21,6 +21,10 @@
             <dd>
                 @Html.DisplayFor(model => model.Name)
             </dd>
+
+            <dd>
+                <img  src="@Url.Content(Model.ImagePath)" alt=""/>
+            </dd>
     
         </dl>
     </div>
