--- a/Cakewalk/BethanysPieShop/Views/Admin/EditPie.cshtml
+++ b/Cakewalk/BethanysPieShop/Views/Admin/EditPie.cshtml
@@ -3,7 +3,7 @@
 <h1>Hello</h1>
 
 <div class="thumbnail">
-    <img alt="@Model.Name" src="@Model.ImageUrl">
+    <img alt="@Model.Name" src="@Model.ImageFileToDisplay">
     <div class="caption-full">
         <h3 class="pull-right">@Model.Price</h3>
         <h3>
