--- a/Cakewalk/BethanysPieShop/Views/Admin/Edit.cshtml
+++ b/Cakewalk/BethanysPieShop/Views/Admin/Edit.cshtml
@@ -1,6 +1,14 @@
 ﻿@model PiesItemViewModel
 
-<form asp-controller="Admin" asp-action="Create" method="post" enctype="multipart/form-data">
+@*@{
+    var preImg = Model.ImageFileToDisplay;
+    var base64 = Convert.ToBase64String(preImg);
+    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+}*@
+
+
+@Html.ActionLink("Delete", "Delete", new { id = Model.PieId })
+<form asp-controller="Admin" asp-action="Create" method="post">
     <fieldset>
         <div>
             @Html.LabelFor(m => m.Name)
@@ -23,9 +31,17 @@
             @Html.EditorFor(m => m.Price)
         </div>
         <div>
-            @Html.LabelFor(m => m.ImageFileToDisplay)
-            <input type="file" name="file" class="btn"/>
+            <label>Current Image:</label>
+            <img src="@Model.GetImageSrc"/>
         </div>
+        <div>
+            @Html.LabelFor(m => m.ImageFileToDisplay)
+            @Html.TextBoxFor(m => m.ImageFileToDisplay)
+        </div>
+        @*<div>
+                @Html.LabelFor(m => m.ImageThumbnailUrl)
+                @Html.TextBoxFor(m => m.ImageThumbnailUrl)
+            </div>*@
         <div>
             @Html.LabelFor(m => m.IsPieOfTheWeek)
             @Html.CheckBoxFor(m => m.IsPieOfTheWeek)
@@ -41,6 +57,6 @@
         <div>
             <input type="submit" value="Create" />
         </div>
-        
+
     </fieldset>
 </form>
