--- a/Cakewalk/BethanysPieShop/Views/Shared/_AdminPieCard.cshtml
+++ b/Cakewalk/BethanysPieShop/Views/Shared/_AdminPieCard.cshtml
@@ -1,23 +1,31 @@
 ﻿@model Pie
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="@Model.ImageThumbnailUrl" alt="">
-            <div class="caption">
-                <h3 class="pull-right">@Model.Price.ToString("c")</h3>
-                <h3>
-                    <a asp-controller="Pie"
-                       asp-action="Details"
-                       asp-route-id="@Model.PieId">@Model.Name</a>
-                </h3>
-                <p>@Model.ShortDescription</p>
-            </div>
-            <div class="addToCart">
-                <p class="button">
-                    <a class="btn btn-primary" 
-                       asp-controller="Admin" 
-                       asp-action="Details"
-                       asp-route-pieId="@Model.PieId">Edit Pie</a>
-                </p>
-            </div>
+
+@{
+    var preImg = Model.ImageFileToDisplay;
+    var base64 = Convert.ToBase64String(preImg);
+    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+}
+
+
+<div class="col-sm-4 col-lg-4 col-md-4">
+    <div class="thumbnail">
+        <img src="@imgSrc" alt="">
+        <div class="caption">
+            <h3 class="pull-right">@Model.Price.ToString("c")</h3>
+            <h3>
+                <a asp-controller="Pie"
+                   asp-action="Details"
+                   asp-route-id="@Model.PieId">@Model.Name</a>
+            </h3>
+            <p>@Model.ShortDescription</p>
+        </div>
+        <div class="addToCart">
+            <p class="button">
+                <a class="btn btn-primary"
+                   asp-controller="Admin"
+                   asp-action="Edit"
+                   asp-route-id="@Model.PieId">Edit Pie</a>
+            </p>
         </div>
     </div>
+</div>
